--- a/Ejemplo01/nlog.config
+++ b/Ejemplo01/nlog.config
@@ -3,14 +3,14 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="E:\PracticasProgramacion\PracticaJapSoftware\JapSoftware.CursoNetCore\Ejemplo01\internal-nlog.txt">
+      internalLogFile="E:\PracticasProgramacion\PracticaJapSoftware\JapSoftware.CursoNetCore3.0\Ejemplo01\internal-nlog.txt">
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
 
   <targets>
     <target xsi:type="File" name="allfile" 
-        fileName="E:\PracticasProgramacion\PracticaJapSoftware\JapSoftware.CursoNetCore\Ejemplo01\nlog-all-${shortdate}.log"
+        fileName="E:\PracticasProgramacion\PracticaJapSoftware\JapSoftware.CursoNetCore3.0\Ejemplo01\nlog-all-${shortdate}.log"
         layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
   </targets>
   <rules>
